First training loop up byt running uinto bugs

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,155 +9,252 @@
     "import sys\n",
     "sys.path.append('./src')\n",
     "\n",
+    "from chatgpt_util_imports import generate_dataset\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from chatgpt_util_imports import generate_dataset"
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data.dataloader import DataLoader\n",
+    "from torch.utils.data import random_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num patches: 31380\n",
-      "dict_keys(['name', 'algorithm', 'feedback', 'operators'])\n",
-      "dict_keys(['eg_rate_level', 'left_curve', 'right_curve', 'detune', 'rate_scaling', 'kvs', 'ams', 'output_level', 'frequency_mode', 'frequency_coarse', 'frequency_fine'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "device = torch.device('mps' if torch.backends.mps.is_available() else 'cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load +31k patches as compiled by `bwhitman` for `learnfm`.\n",
     "fpath = 'data/compact.bin'\n",
     "\n",
-    "dataset = generate_dataset(fpath)\n",
+    "df = generate_dataset(fpath)\n",
+    "df = pd.DataFrame(df)\n",
     "\n",
-    "print(f\"Num patches: {len(dataset)}\")\n",
-    "print(dataset[0].keys())\n",
-    "print(dataset[0]['operators'][0].keys())"
+    "print(f\"Num patches: {len(df)}\")\n",
+    "print(f\"Num features: {len(df.keys())}\")\n",
+    "\n",
+    "# df.hist(figsize=(50, 50))\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = []\n",
+    "class PatchDataset(Dataset):\n",
+    "    def __init__(self, df):\n",
     "\n",
-    "for patch in dataset:\n",
-    "    datum = {}\n",
+    "        if 'VOICE NAME' in df.keys():\n",
+    "            df = df.drop(columns=['VOICE NAME'])\n",
+    "        \n",
+    "        self.parameter_names = df.keys()\n",
+    "        self.means = df.mean()\n",
+    "        self.stds = df.std()\n",
     "\n",
-    "    datum['name'] = patch['name']\n",
-    "    datum['algorith'] = patch['algorithm']\n",
-    "    datum['feedback'] = patch['feedback']\n",
+    "        df = df - df.mean()\n",
+    "        df = df / df.std()\n",
     "\n",
-    "    for n, operator in enumerate(patch['operators']):\n",
-    "        for key in operator.keys():\n",
-    "            fieldname = f\"op{n}_{key}\"\n",
-    "            datum[fieldname] = operator[key]\n",
+    "        self.df = torch.tensor(df.values, dtype=torch.float32)\n",
     "\n",
-    "    df.append(datum)\n",
-    "\n",
-    "df = pd.DataFrame(df)\n"
+    "    def __len__(self):\n",
+    "        return len(self.df)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.df[idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'creepjaz',\n",
-       " 'algorithm': 5,\n",
-       " 'feedback': 0,\n",
-       " 'operators': [{'eg_rate_level': [90, 35, 20, 54, 99, 80, 0, 0, 38, 0, 99],\n",
-       "   'left_curve': 0,\n",
-       "   'right_curve': 3,\n",
-       "   'detune': 3,\n",
-       "   'rate_scaling': 7,\n",
-       "   'kvs': 0,\n",
-       "   'ams': 3,\n",
-       "   'output_level': 94,\n",
-       "   'frequency_mode': 0,\n",
-       "   'frequency_coarse': 1,\n",
-       "   'frequency_fine': 43},\n",
-       "  {'eg_rate_level': [90, 35, 20, 54, 99, 80, 0, 0, 0, 0, 99],\n",
-       "   'left_curve': 2,\n",
-       "   'right_curve': 3,\n",
-       "   'detune': 2,\n",
-       "   'rate_scaling': 7,\n",
-       "   'kvs': 0,\n",
-       "   'ams': 2,\n",
-       "   'output_level': 86,\n",
-       "   'frequency_mode': 0,\n",
-       "   'frequency_coarse': 1,\n",
-       "   'frequency_fine': 43},\n",
-       "  {'eg_rate_level': [90, 73, 0, 54, 99, 80, 0, 0, 30, 0, 98],\n",
-       "   'left_curve': 0,\n",
-       "   'right_curve': 2,\n",
-       "   'detune': 1,\n",
-       "   'rate_scaling': 7,\n",
-       "   'kvs': 3,\n",
-       "   'ams': 4,\n",
-       "   'output_level': 76,\n",
-       "   'frequency_mode': 0,\n",
-       "   'frequency_coarse': 15,\n",
-       "   'frequency_fine': 0},\n",
-       "  {'eg_rate_level': [90, 30, 0, 54, 99, 80, 0, 0, 0, 0, 0],\n",
-       "   'left_curve': 2,\n",
-       "   'right_curve': 0,\n",
-       "   'detune': 1,\n",
-       "   'rate_scaling': 7,\n",
-       "   'kvs': 0,\n",
-       "   'ams': 4,\n",
-       "   'output_level': 97,\n",
-       "   'frequency_mode': 0,\n",
-       "   'frequency_coarse': 0,\n",
-       "   'frequency_fine': 91},\n",
-       "  {'eg_rate_level': [90, 29, 0, 54, 99, 86, 0, 0, 0, 0, 0],\n",
-       "   'left_curve': 3,\n",
-       "   'right_curve': 0,\n",
-       "   'detune': 1,\n",
-       "   'rate_scaling': 7,\n",
-       "   'kvs': 0,\n",
-       "   'ams': 4,\n",
-       "   'output_level': 83,\n",
-       "   'frequency_mode': 0,\n",
-       "   'frequency_coarse': 0,\n",
-       "   'frequency_fine': 90},\n",
-       "  {'eg_rate_level': [90, 35, 0, 54, 99, 80, 57, 0, 0, 0, 0],\n",
-       "   'left_curve': 2,\n",
-       "   'right_curve': 0,\n",
-       "   'detune': 0,\n",
-       "   'rate_scaling': 7,\n",
-       "   'kvs': 0,\n",
-       "   'ams': 4,\n",
-       "   'output_level': 99,\n",
-       "   'frequency_mode': 0,\n",
-       "   'frequency_coarse': 0,\n",
-       "   'frequency_fine': 91}]}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset[0]"
+    "dataset = PatchDataset(df)\n",
+    "\n",
+    "p_train = 0.8\n",
+    "batch_size = 32\n",
+    "\n",
+    "n_train = int(p_train * len(dataset))\n",
+    "n_val = len(dataset) - n_train\n",
+    "\n",
+    "train_dataset, val_dataset = random_split(dataset, [n_train, n_val])\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VAE(nn.Module):\n",
+    "    \"\"\" \n",
+    "    Variational autoencoder class, as per _Auto-Encoding Variational Bayes_. \n",
+    "        https://arxiv.org/pdf/1312.6114.pdf\n",
+    "\n",
+    "    Code written with reference to:\n",
+    "        https://github.com/AntixK/PyTorch-VAE/\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, n_features, n_hidden, n_latent):\n",
+    "        super(VAE, self).__init__()\n",
+    "\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Linear(n_features, n_hidden),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(n_hidden, n_latent),\n",
+    "            nn.ReLU(),\n",
+    "            )\n",
+    "        \n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(n_latent, n_latent),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(n_latent, n_hidden),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(n_hidden, n_features),\n",
+    "        )\n",
+    "\n",
+    "        self.fc_mu = nn.Linear(n_latent, n_latent)\n",
+    "        self.fc_var = nn.Linear(n_latent, n_latent)\n",
+    "\n",
+    "    def encode(self, x):\n",
+    "        x = self.encoder(x)\n",
+    "\n",
+    "        # From latent embedding, generate mean and standard deviation.\n",
+    "        mu = self.fc_mu(x)\n",
+    "        log_var = self.fc_var(x)\n",
+    "\n",
+    "        return [mu, log_var]\n",
+    "    \n",
+    "    def decode(self, z):\n",
+    "        return self.decoder(z)\n",
+    "    \n",
+    "    def reparameterize(self, mu, log_var):\n",
+    "        # Render as a random sample from Gaussian distribution.\n",
+    "        std = torch.exp(0.5 * log_var)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        return eps * std + mu\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mu, log_var = self.encode(x)\n",
+    "\n",
+    "        # Latent representation.\n",
+    "        z = self.reparameterize(mu, log_var)\n",
+    "\n",
+    "        y = self.decode(z)\n",
+    "        return [y, mu, log_var]\n",
+    "\n",
+    "def vae_loss(x, y, mu, log_var, kld_weight=1.0):\n",
+    "\n",
+    "    reconstruction_loss = F.mse_loss(x, y)\n",
+    "    kullback_liebler_loss = torch.mean(\n",
+    "        -0.5 * torch.sum(1 + log_var - mu ** 2 - log_var.exp(), dim=1), dim=0\n",
+    "    )\n",
+    "\n",
+    "    loss = reconstruction_loss + kld_weight * kullback_liebler_loss\n",
+    "    return {'loss': loss, 'mse': reconstruction_loss, 'kld': kullback_liebler_loss}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_features = len(dataset.parameter_names)\n",
+    "n_hidden = 64\n",
+    "n_latent = 16\n",
+    "\n",
+    "model = VAE(n_features, n_hidden, n_latent)\n",
+    "model = model.to(device)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Train loss: 0.03139978, (MSE: 0.03139829, KLD: 0.00000150)\n",
+      "Epoch 0, Val loss: 0.03211069, (MSE: 0.03210773, KLD: 0.00000296)\n",
+      "Epoch 1, Train loss: 0.03139569, (MSE: 0.03139399, KLD: 0.00000170)\n",
+      "Epoch 1, Val loss: 0.03206557, (MSE: 0.03206410, KLD: 0.00000146)\n",
+      "Epoch 2, Train loss: 0.03140579, (MSE: 0.03140438, KLD: 0.00000141)\n",
+      "Epoch 2, Val loss: 0.03207097, (MSE: 0.03206869, KLD: 0.00000228)\n",
+      "Epoch 3, Train loss: 0.03140994, (MSE: 0.03140814, KLD: 0.00000181)\n",
+      "Epoch 3, Val loss: 0.03205190, (MSE: 0.03204911, KLD: 0.00000279)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training.\n",
+    "n_epochs = 10\n",
+    "\n",
+    "for i in range(n_epochs):\n",
+    "\n",
+    "    model.train()\n",
+    "    epoch_train_loss = {key: 0.0 for key in ['loss', 'mse', 'kld']}\n",
+    "    epoch_val_loss = {key: 0.0 for key in ['loss', 'mse', 'kld']}\n",
+    "\n",
+    "    for x in train_loader:\n",
+    "        x = x.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        y, mu, log_var = model(x)\n",
+    "        loss = vae_loss(x, y, mu, log_var)\n",
+    "        loss['loss'].backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        for key in loss.keys():\n",
+    "            epoch_train_loss[key] += loss[key].item()\n",
+    "\n",
+    "    # Report average loss.\n",
+    "    for key in loss.keys():\n",
+    "        epoch_train_loss[key] /= len(train_dataset)\n",
+    "\n",
+    "\n",
+    "    model.eval()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for x in val_loader:\n",
+    "            x = x.to(device)\n",
+    "\n",
+    "            y, mu, log_var = model(x)\n",
+    "            loss = vae_loss(x, y, mu, log_var)\n",
+    "\n",
+    "            for key in loss.keys():\n",
+    "                epoch_val_loss[key] += loss[key].item()\n",
+    "\n",
+    "        for key in loss.keys():\n",
+    "                epoch_val_loss[key] /= len(val_dataset)\n",
+    "\n",
+    "    print(f\"Epoch {i}, Train loss: {epoch_train_loss['loss']:.8f}, (MSE: {epoch_train_loss['mse']:.8f}, KLD: {epoch_train_loss['kld']:.8f})\")\n",
+    "    print(f\"Epoch {i}, Val loss: {epoch_val_loss['loss']:.8f}, (MSE: {epoch_val_loss['mse']:.8f}, KLD: {epoch_val_loss['kld']:.8f})\")"
+   ]
   }
  ],
  "metadata": {
