Make simple tool for catridge expansion

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -135,51 +135,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "fpath = 'checkpoints/chkpnt_20231001_235220_epoch990.pt'\n",
     "load_checkpoint(fpath, model, optimizer)\n",
+    "model.eval()\n",
     "\n",
     "restore = dataset.get_restorer()\n",
     "\n",
-    "model.eval()\n",
+    "# Sample first 16 patches and their reconstructions.\n",
+    "patches = []\n",
     "with torch.no_grad():\n",
-    "    for x in dataset:\n",
+    "    for i, x in enumerate(dataset):\n",
     "        x = x.to(device)\n",
     "        y, mu, log_var = model(x)\n",
     "\n",
     "        x = x.to('cpu')\n",
-    "        x = restore(x)\n",
-    "\n",
     "        y = y.to('cpu')\n",
+    "\n",
+    "        x = restore(x)\n",
     "        y = restore(y)\n",
     "\n",
-    "        break"
+    "        x['VOICE NAME'] = f\"x{i}\"\n",
+    "        y['VOICE NAME'] = f\"y{i}\"\n",
+    "\n",
+    "        patches.append(x)\n",
+    "        patches.append(y)\n",
+    "\n",
+    "        if i >= 15:\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatgpt_util_imports import pack_patch, generate_sysex_with_corrected_checksum, write_sysex_to_file\n",
+    "from chatgpt_util_imports import make_cartridge\n",
     "\n",
-    "packed_patches = bytearray()\n",
+    "fpath = \"data/test.syx\"\n",
     "\n",
-    "for _ in range(16):\n",
-    "    packed_patches += pack_patch(x)\n",
-    "\n",
-    "for _ in range(16):\n",
-    "    packed_patches += pack_patch(y)\n",
-    "\n",
-    "# Generate the SysEx message for the selected patches\n",
-    "sysex_data_32_patches = generate_sysex_with_corrected_checksum(packed_patches)\n",
-    "\n",
-    "# Write the SysEx message to a file\n",
-    "write_sysex_to_file(sysex_data_32_patches, \"test.syx\")\n"
+    "cartridge_data = make_cartridge(patches)\n",
+    "with open(fpath, 'wb') as file:\n",
+    "    file.write(cartridge_data)\n"
    ]
   }
  ],
