--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
      "output_type": "stream",
      "text": [
       "Num patches: 30810\n",
-      "Num features: 146\n"
+      "Num features: 227\n"
      ]
     }
    ],
@@ -69,20 +69,20 @@
     "df = clean_data(df)\n",
     "df = onehot_encode(df)\n",
     "\n",
-    "print(f\"Num patches: {len(df)}\")\n",
-    "print(f\"Num features: {len(df.keys())}\")"
+    "dataset = PatchDataset(df)\n",
+    "\n",
+    "print(f\"Num patches: {dataset.df.shape[0]}\")\n",
+    "print(f\"Num features: {dataset.df.shape[1]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
     "p_train = 0.8\n",
     "batch_size = 128\n",
-    "\n",
-    "dataset = PatchDataset(df)\n",
     "\n",
     "n_train = int(p_train * len(dataset))\n",
     "n_val = len(dataset) - n_train\n",
