WIP add onehot decode to signal chin

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +207,9 @@
     "\n",
     "        x = restore(x)\n",
     "        y = restore(y)\n",
+    "\n",
+    "        x = onehot_decode(x)\n",
+    "        y = onehot_decode(y)\n",
     "\n",
     "        x['VOICE NAME'] = f\"x{i}\"\n",
     "        y['VOICE NAME'] = f\"y{i}\"\n",
@@ -338,6 +341,7 @@
     "\n",
     "        x = model.decode(z).cpu()\n",
     "        x = restore(x)\n",
+    "        x = onehot_decode(x)\n",
     "\n",
     "        x['VOICE NAME'] = f\"{i}, {middle_idx}\"\n",
     "\n",
@@ -348,6 +352,7 @@
     "\n",
     "        x = model.decode(z).cpu()\n",
     "        x = restore(x)\n",
+    "        x = onehot_decode(x)\n",
     "\n",
     "        x['VOICE NAME'] = f\"{middle_idx}, {i}\"\n",
     "        patches.append(x)"
