--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,67 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([ 0.4369, -0.6182, -0.6378,  0.2604,  0.3256,  0.1737, -1.0104, -0.3106,\n",
-      "         0.5217, -0.3942,  3.5715,  0.8914,  0.8216,  0.2783, -0.3268,  0.8274,\n",
-      "        -0.6570,  1.2968,  0.4877, -0.5042, -0.5694,  0.2628,  0.3128,  0.1000,\n",
-      "        -1.0662, -0.2619, -0.9940, -0.3490,  3.7019,  0.7638,  0.8513,  0.4154,\n",
-      "        -0.3277,  0.3097, -0.4254,  1.6339,  0.5162,  0.7462, -1.2189,  0.1424,\n",
-      "         0.3520,  0.0316, -1.0898, -0.2567,  0.1871, -0.3410,  3.7673,  0.3716,\n",
-      "         0.8344,  1.3320,  3.7832, -0.3653,  2.5154, -0.3826,  0.5867, -0.5980,\n",
-      "        -1.3222,  0.1970,  0.2906, -0.0728, -1.0325, -0.2119, -0.9212, -0.3880,\n",
-      "        -0.4523,  0.4620,  0.8004,  1.3078, -0.3412,  0.5121, -0.4928,  3.6989,\n",
-      "         0.4383, -0.6912, -1.2234,  0.2932,  0.3487,  0.3447, -1.1115, -0.3089,\n",
-      "        -1.0141, -0.3183, -0.4865,  0.4904,  0.8792,  1.5153, -0.3286,  0.1445,\n",
-      "        -0.5843,  3.6028,  0.6173, -0.4236, -1.2887, -0.0056,  0.2548, -0.0435,\n",
-      "         0.2452, -0.1081, -0.8262, -0.3912, -0.3427,  0.1596,  0.7728,  1.7316,\n",
-      "        -0.3252,  0.3015, -0.4249,  4.8409,  0.4050, -0.3417,  0.4107, -0.2907,\n",
-      "         0.0419,  0.0767,  0.0987,  0.0657, -0.0562,  0.8937, -0.7367,  1.5795,\n",
-      "         2.2734, -0.6641, -0.7797])\n",
-      "tensor([0., 0., 1., 0.])\n",
-      "tensor([1., 0., 0., 0.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([0., 0., 0., 1.])\n",
-      "tensor([1., 0., 0., 0.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([0., 0., 1., 0.])\n",
-      "tensor([1., 0., 0., 0.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([1., 0., 0., 0.])\n",
-      "tensor([0., 0., 1., 0.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([0., 0., 1., 0.])\n",
-      "tensor([0., 0., 0., 1.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([1., 0., 0., 0.])\n",
-      "tensor([0., 0., 0., 1.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.])\n",
-      "tensor([0., 1.])\n",
-      "tensor([1., 0.])\n",
-      "tensor([0., 0., 1., 0., 0., 0., 0., 0.])\n"
-     ]
-    }
-   ],
-   "source": [
-    "idx = np.array([0] + dataset.decoder_spec).cumsum()\n",
-    "\n",
-    "for i in dataset:\n",
-    "    for j in range(len(idx) - 1):\n",
-    "        print(i[idx[j]:idx[j+1]])\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,30 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 38\n",
-      "Trn: 0.00309480\tVal: 0.00321245\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/maxhenry/Documents/python/dx7-vae/notebook.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/maxhenry/Documents/python/dx7-vae/notebook.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m val_loss \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/maxhenry/Documents/python/dx7-vae/notebook.ipynb#W6sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n_epochs):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/maxhenry/Documents/python/dx7-vae/notebook.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     epoch_train_loss \u001b[39m=\u001b[39m train_one_epoch(model, train_loader, optimizer, device, model_type)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/maxhenry/Documents/python/dx7-vae/notebook.ipynb#W6sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     epoch_val_loss \u001b[39m=\u001b[39m validate(model, val_loader, device, model_type)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/maxhenry/Documents/python/dx7-vae/notebook.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     scheduler\u001b[39m.\u001b[39mstep(epoch_val_loss)\n",
-      "File \u001b[0;32m~/Documents/python/dx7-vae/./src/train.py:66\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[0;34m(model, train_loader, optimizer, device, model_type)\u001b[0m\n\u001b[1;32m     64\u001b[0m     y, z = model(x)\n\u001b[1;32m     65\u001b[0m     loss = F.mse_loss(x, y)\n\u001b[0;32m---> 66\u001b[0m elif model_type == 'mixed_ae':\n\u001b[1;32m     67\u001b[0m     y, z = model(x)\n\u001b[1;32m     68\u001b[0m     loss = mixed_loss(x, y)\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[1;32m    489\u001b[0m )\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.9/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 10\n",
+      "Trn: -8982126.82116196\tVal: -11597850.81726712\n",
+      "\n",
+      "================================================================================\n",
+      "Saved checkpoint at: checkpoints/chkpnt_20231031_174828_epoch10.pt\n",
+      "================================================================================\n"
      ]
     }
    ],
